# chat-with-timeseries-speckit

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  postCreate.sh
.githooks/: pre-commit
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-oil-well-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-oil-well-api/checklists/: requirements.md
specs/001-oil-well-api/contracts/: openapi.yaml
src/: config.py
src/api/: main.py  metrics.py  timeseries.py  wells.py
src/db/: database.py  seed.py
src/models/: __init__.py  well.py
src/services/: data_generator.py  query_service.py
tests/unit/: test_placeholder.py
timeseries-api/: README.md  pyproject.toml  ruff.toml
timeseries-api/src/api/: __init__.py  metrics.py  timeseries.py  wells.py
timeseries-api/src/db/: __init__.py  schema.sql  seed.py
timeseries-api/src/models/: aggregated.py  metric.py  responses.py  timeseries.py
timeseries-api/src/services/: __init__.py  aggregation.py  data_generator.py  query_service.py
timeseries-api/tests/contract/: test_openapi_compliance.py
timeseries-api/tests/integration/: test_aggregated_api.py  test_metrics_api.py  test_timeseries_api.py  test_wells_api.py
timeseries-api/tests/unit/: test_aggregation.py  test_data_generator.py  test_placeholder.py  test_query_service.py
